--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: white;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: #535bf2;
+  color: rgb(0, 255, 0);
 }
 
 body {
@@ -44,6 +44,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:not(:disabled):hover {
   border-color: rgb(0, 255, 0);
 }
@@ -62,6 +63,7 @@ button:disabled {
 #app {
   max-width: 1280px;
   margin: 0 auto;
+  position: relative;
 }
 
 .text-green {
@@ -78,4 +80,23 @@ button:disabled {
 
 .bold {
   font-weight: bold;
+}
+
+table {
+  border-collapse: collapse;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+td, th {
+  text-align: left;
+  padding: 2px 6px;
+  border: 0;
+}
+
+input[type="number"] {
+  width: 50px;
+  height: 36px;
+  margin-right: 3px;
+  border: 0;
 }
