Add lose condition

--- a/src/style.css
+++ b/src/style.css
@@ -110,3 +110,13 @@ input[type="number"] {
   position: fixed;
   left: 50%;
 }
+
+.modal-overlay-bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  background-color: rgba(0,0,0,.7);
+}
