--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ h1 {
 button {
   border-radius: 0;
   border: 1px solid white;
-  padding: 0.6em 1.2em;
+  padding: 0.3em 1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -62,7 +62,8 @@ button:disabled {
 }
 
 #app {
-  max-width: 1280px;
+  width: 90%;
+  max-width: 800px;
   margin: 0 auto;
   position: relative;
 }
@@ -95,13 +96,13 @@ table {
 
 td, th {
   text-align: left;
-  padding: 2px 6px;
+  padding: 2px 6px 2px 0;
   border: 0;
 }
 
 input[type="number"] {
   width: 50px;
-  height: 36px;
+  height: 28px;
   margin-right: 3px;
   border: 0;
 }
