--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ html {
   font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 500;
+  font-weight: 400;
   color: var(--text-color);
   background: var(--bg-color);
 }
@@ -41,6 +41,11 @@ section {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h4 {
+  text-align: center;
+  margin: 0 0 5px;
 }
 
 a {
@@ -89,6 +94,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   min-width: 320px;
   max-width: 800px;
   width: 90%;
@@ -97,15 +103,15 @@ main {
 }
 
 .text-green {
-  color: --success-color
+  color: var(--success-color)
 }
 
 .text-red {
-  color: --success-warning
+  color: var(--warning-color)
 }
 
 .text-blue {
-  color: --success-notice
+  color: var(--notice-color)
 }
 
 .text-center {
@@ -141,7 +147,7 @@ input[type="number"] {
   z-index: 1;
   box-shadow: 10px 10px rgba(33, 33, 33, .8);
   position: fixed;
-  left: 50%;
+  z-index: 1;
 }
 
 .modal-overlay-bg {
