--- a/src/style.css
+++ b/src/style.css
@@ -146,10 +146,11 @@ td, th {
   text-align: left;
   padding: 2px 6px 2px 0;
   border: 0;
+  line-height: 1;
 }
 
 th {
-  opacity: .6
+  opacity: .6;
 }
 
 input[type="number"] {
@@ -164,7 +165,7 @@ input[type="number"] {
   background-color: var(--bg-color);
   z-index: 1;
   box-shadow: 10px 10px rgba(33, 33, 33, .8);
-  position: fixed;
+  position: absolute;
   z-index: 1;
 }
 
