--- a/src/style.css
+++ b/src/style.css
@@ -5,30 +5,24 @@
   font-style: normal;
 }
 
-:root,
 html.dark-theme {
   --text-color: #FCFCFC;
   --bg-color: #111;
   --success-color: rgb(0, 255, 0);
   --warning-color: rgb(255, 0, 0);
   --notice-color: rgb(0, 0, 255);
-
-  color-scheme: light dark;
 }
 
-@media screen and (prefers-color-scheme: light) {
-  :root {
-    --text-color: #C2C2C2;
-    --bg-color: #0100AB;
-    --notice-color: rgb(255, 255, 255);
-  }
+html.light-theme {
+  --text-color: #C2C2C2;
+  --bg-color: #0100AB;
+  --notice-color: rgb(255, 255, 255);
 }
+
 
 html {
   font-family: 'dosfont', 'Courier New', Courier, monospace;
-  font-size: 18px;
-  /* font-family: 'Courier New', Courier, monospace;
-  font-size: 16px; */
+  font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   color: var(--text-color);
