--- a/src/style.css
+++ b/src/style.css
@@ -5,25 +5,26 @@
   font-style: normal;
 }
 
+:root,
 html.dark-theme {
   --text-color: #FCFCFC;
   --bg-color: #111;
   --success-color: rgb(0, 255, 0);
   --warning-color: rgb(255, 0, 0);
   --notice-color: rgb(0, 0, 255);
+  --font-setting:  15px/22px 'Courier New', Courier, monospace;
 }
 
 html.light-theme {
   --text-color: #C2C2C2;
   --bg-color: #0100AB;
   --notice-color: rgb(255, 255, 255);
+  --font-setting: 16px/24px 'dosfont', 'Courier New', Courier, monospace;
 }
 
 
 html {
-  font-family: 'dosfont', 'Courier New', Courier, monospace;
-  font-size: 16px;
-  line-height: 24px;
+  font: var(--font-setting);
   font-weight: 400;
   color: var(--text-color);
   background: var(--bg-color);
@@ -66,6 +67,10 @@ a {
 
 a:hover {
   color: var(--success-color)
+}
+
+input {
+  font: var(--font-setting);
 }
 
 button {
