--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,51 @@ html.light-theme {
   --bg-color: #0100AB;
   --notice-color: rgb(255, 255, 255);
   --font-setting: 16px/24px 'dosfont', 'Courier New', Courier, monospace;
+
+  section {
+    outline: 3px solid #C2C2C2;
+    outline-style: double;
+    border: 0;
+  }
+
+  button {
+    background: var(--text-color);
+    color: var(--bg-color);
+    border: 1px solid var(--text-color);
+  }
+
+  button:disabled {
+    opacity: .5;
+    background: var(--text-color);
+    color: var(--bg-color);
+  }
+
+  button:not(:disabled):hover {
+    background: var(--bg-color);
+    color: var(--text-color);
+    border-color: var(--text-color);
+  }
+
+  .modal {
+    --notice-color: --text-color;
+    background: var(--text-color);
+    color: var(--bg-color);
+    outline: 5px solid var(--bg-color);
+    outline-offset: -10px;
+
+    button {
+      background: var(--bg-color);
+      border-color: var(--bg-color);
+      color: var(--text-color);
+    }
+
+    button:not(:disabled):hover {
+      background: var(--bg-color);
+      border-color: var(--bg-color);
+      color: var(--text-color);
+    }
+
+  }
 }
 
 
@@ -167,7 +212,7 @@ input[type="number"] {
   z-index: 1;
   box-shadow: 10px 10px rgba(33, 33, 33, .8);
   position: absolute;
-  z-index: 1;
+  z-index: 20;
 }
 
 .modal-overlay-bg {
@@ -176,8 +221,8 @@ input[type="number"] {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 0;
   background-color: rgba(0,0,0,.7);
+  z-index: 10;
 }
 
 .mt-auto {
