Add weapons dialog and selling

--- a/src/style.css
+++ b/src/style.css
@@ -132,6 +132,15 @@ button {
     background: var(--success-color);
     color: var(--bg-color);
   }
+
+  &.secondary {
+    background: transparent;
+    padding: 0;
+    border-bottom: 1px solid var(--notice-color);
+    color: var(--notice-color);
+    font-size: 11px;
+    font-weight: bold;
+  }
 }
 
 
